--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@reduxjs/toolkit": "^1.6.1",
+    "axios": "^0.22.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-camera": "^3.44.1",
@@ -29,7 +32,8 @@
     "react-native-tts": "^4.1.0",
     "react-native-use-modal-hooks": "^1.3.0",
     "react-native-use-sound": "^1.2.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "react-redux": "^7.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
