--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.22.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-audio-record": "^0.2.2",
     "react-native-camera": "^3.44.1",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
