--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-sound": "^0.11.0",
     "react-native-svg": "^12.1.1",
     "react-native-tts": "^4.1.0",
