--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 
-target 'learnApp' do
+target 'welipillaapp' do
   config = use_native_modules!
 
   use_react_native!(
@@ -16,7 +16,7 @@ target 'learnApp' do
 
   pod 'TextToSpeech', :path => '../node_modules/react-native-tts'
 
-  target 'learnAppTests' do
+  target 'welipillaappTests' do
     inherit! :complete
     # Pods for testing
   end
