--- a/ios/welipillaapp.xcodeproj/xcshareddata/xcschemes/welipillaapp.xcscheme
+++ b/ios/welipillaapp.xcodeproj/xcshareddata/xcschemes/welipillaapp.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "learnApp.app"
-               BlueprintName = "learnApp"
-               ReferencedContainer = "container:learnApp.xcodeproj">
+               BuildableName = "welipillaapp.app"
+               BlueprintName = "welipillaapp"
+               ReferencedContainer = "container:welipillaapp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "learnAppTests.xctest"
-               BlueprintName = "learnAppTests"
-               ReferencedContainer = "container:learnApp.xcodeproj">
+               BuildableName = "welipillaappTests.xctest"
+               BlueprintName = "welipillaappTests"
+               ReferencedContainer = "container:welipillaapp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "learnApp.app"
-            BlueprintName = "learnApp"
-            ReferencedContainer = "container:learnApp.xcodeproj">
+            BuildableName = "welipillaapp.app"
+            BlueprintName = "welipillaapp"
+            ReferencedContainer = "container:welipillaapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "learnApp.app"
-            BlueprintName = "learnApp"
-            ReferencedContainer = "container:learnApp.xcodeproj">
+            BuildableName = "welipillaapp.app"
+            BlueprintName = "welipillaapp"
+            ReferencedContainer = "container:welipillaapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
