--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learnApp",
+  "name": "welipillaapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -24,8 +24,10 @@
     "react-native-camera": "^3.44.1",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.3.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "^2.1.0",
+    "react-native-rename": "^2.9.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
     "react-native-simple-toast": "^1.1.3",
