--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/checkbox": "^0.5.8",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
@@ -21,6 +22,7 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-audio-record": "^0.2.2",
+    "react-native-beauty-webview": "^2.0.0",
     "react-native-camera": "^3.44.1",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
@@ -36,6 +38,7 @@
     "react-native-tts": "^4.1.0",
     "react-native-use-modal-hooks": "^1.3.0",
     "react-native-use-sound": "^1.2.0",
+    "react-native-webview": "^11.14.3",
     "react-navigation": "^4.4.4",
     "react-redux": "^7.2.5"
   },
